src/test/deca/etapeB/invalid/sum_bad_type3.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 11 : mauvais typage de la somme
// 

{
    int a;
    a = 56 + null;
}
